--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .js,.vue ."
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
     "nuxt": "^3.12.3",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-tsc": "^2.0.26"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.18.1",
     "@nuxtjs/eslint-config": "^12.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.3"
   }
 }
