--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.12.3",
     "vue": "latest",
     "vue-tsc": "^2.0.26"
@@ -19,10 +21,13 @@
     "@nuxt/types": "^2.18.1",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/google.maps": "^3.58.1",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "typescript": "^5.5.3"
   }
 }
